Add tests for mounted swagger docs engine
Ensures we substitue host/port/scheme vars for each environment

Also moves docs to v2 folder to match v2 in specification
