# config/initializers/rswag_api.rb
@@ -5,9 +5,13 @@ Rswag::Api.configure do |c|
   # that it's configured to generate files in the same folder
   c.swagger_root = "#{Rails.root}/swagger"
 
-  # Inject a lamda function to alter the returned Swagger prior to serialization
+  # Inject a lambda function to alter the returned Swagger prior to serialization
   # The function will have access to the rack env for the current request
   # For example, you could leverage this to dynamically assign the "host" property
   #
-  c.swagger_filter = ->(swagger, _env) { swagger['host'] = Settings.host.name }
+  c.swagger_filter = ->(swagger, _env) {
+    authority = Settings.host.name + (Settings.host.port.blank? ? '' : ":#{Settings.host.port}")
+    swagger['servers'][0]['variables']['authority']['default'] = authority
+    swagger['servers'][0]['variables']['protocol']['default'] = BawApp.dev_or_test? ? 'http' : 'https'
+  }
 end
